--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express": "~4.9.0",
+    "express": "^4.9.8",
     "express-session": "^1.9.2",
     "imagemagick": "^0.1.3",
     "mongoose": "^3.8.19",
