--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^3.8.19",
     "morgan": "~1.3.0",
     "multer": "^0.1.6",
+    "normalizer": "^1.2.7",
     "serve-favicon": "~2.1.3"
   }
 }
