--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.3.0",
     "multer": "^0.1.6",
     "normalizer": "^1.2.7",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "string": "^2.2.0"
   }
 }
