--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
-    "ejs": "~0.8.5",
-    "express": "^4.9.8",
-    "express-session": "^1.9.2",
-    "imagemagick": "^0.1.3",
-    "mongoose": "^3.8.19",
-    "morgan": "~1.3.0",
+    "body-parser": "^1.8.4",
+    "cookie-parser": "^1.3.3",
+    "debug": "^2.0.0",
+    "ejs": "^0.8.8",
+    "express": "^4.10.5",
+    "express-session": "^1.9.3",
+    "mongoose": "^3.8.20",
+    "morgan": "^1.3.2",
     "multer": "^0.1.6",
     "normalizer": "^1.2.7",
-    "serve-favicon": "~2.1.3",
+    "serve-favicon": "^2.1.7",
     "string": "^2.2.0"
   }
 }
